[package]
name = "govdeals"
version = "0.1.0"
authors = ["Vincent Vermilya <TapeWerm@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmlescape = "0.3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
